// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress collection early closure date can be passed as a parameter 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Collection early closure
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress collection early closure date can be passed as a step 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Collection early closure
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Closed
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress collection start date can be passed as a parameter 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Collection start date
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress collection start date can be passed as a step 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Collection start date
      </div>
      <div
        className="ecl-timeline__content"
      >
        22/09/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress footnote is displayed given a flag for earlier closure date 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Closed
        <span
          className="ecl-u-type-color-red"
        >
           *
        </span>
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
  </ol>,
  <p
    class="ecl-u-type-paragraph-s ecl-u-type-color-red"
  >
    Collection closed earlier by organisers.
  </p>,
]
`;

exports[`Progress no input: provides feedback for unsupported timeline 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <p
    className="ecl-u-type-paragraph"
  >
    Given status cannot be mapped to currently supported timeline.
  </p>,
]
`;

exports[`Progress renders timeline in right order regardless of input order 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress utilities steps supported are public 1`] = `
Array [
  "REGISTERED",
  "COLLECTION_START_DATE",
  "ONGOING",
  "COLLECTION_EARLY_CLOSURE",
  "CLOSED",
  "VERIFICATION",
  "SUBMITTED",
  "ANSWERED",
]
`;
